--- a/src/components/Common/Paginator/Paginator.module.css
+++ b/src/components/Common/Paginator/Paginator.module.css
@@ -1,3 +1,13 @@
-  .selectedPage{
+.paginator{
+    margin: 20px;
+  }
+
+.pageNumber{
+    padding: 2px;
+    border: 1px solid grey;
+  }
+
+  .pageNumber.selectedPage{
       font-weight: bold;
+      border-color: black;
   }
